--- a/AppCommander/App.config
+++ b/AppCommander/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="XMLPath" value="D:\TMP\blah.xml"/>
+    <add key="LogDirectory" value="log"/>
+    <add key="LogLevel" value="3" />
+  </appSettings>
 </configuration>
