--- a/AppCommander/AppCommander.csproj
+++ b/AppCommander/AppCommander.csproj
@@ -163,6 +163,15 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Common\Assets\android_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Common\Assets\apple_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Common\Assets\windows_small.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(XamlSpyInstallPath)MSBuild\FirstFloor.XamlSpy.WPF.targets" Condition="'$(XamlSpyInstallPath)' != '' and '$(Configuration)' == 'DEBUG'" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
