--- a/AppCommander/App.config
+++ b/AppCommander/App.config
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AppCommander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
-  <appSettings>
-    <add key="XMLPath" value="D:\TMP\blah.xml"/>
-    <add key="LogDirectory" value="log"/>
-    <add key="LogLevel" value="3" />
-  </appSettings>
+  <userSettings>
+    <AppCommander.Properties.Settings>
+      <setting name="XMLPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LogDirectory" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LogLevel" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </AppCommander.Properties.Settings>
+  </userSettings>
 </configuration>
