--- a/AppCommander/AppCommander.csproj
+++ b/AppCommander/AppCommander.csproj
@@ -99,15 +99,16 @@
     <Compile Include="Common\Converters\StringToXMLVersionConverter.cs" />
     <Compile Include="Common\Log\Logger.cs" />
     <Compile Include="Common\TemplateSelectors\MainAreaContentTemplateSelector.cs" />
+    <Compile Include="Common\TemplateSelectors\EditImageTemplateSelector.cs" />
     <Compile Include="Common\TemplateSelectors\PersonAreaTemplateSelector.cs" />
     <Compile Include="Common\UserControls\RatingControl.xaml.cs">
       <DependentUpon>RatingControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Appl.cs" />
-    <Compile Include="Model\ModelHelper.cs" />
-    <Compile Include="Model\Plattform.cs" />
+    <Compile Include="Model\NotUsed\ModelHelper.cs" />
+    <Compile Include="Model\NotUsed\Plattform.cs" />
     <Compile Include="Model\Serializer.cs" />
-    <Compile Include="Model\ValidPlattform.cs" />
+    <Compile Include="Model\NotUsed\ValidPlattform.cs" />
     <Compile Include="Model\XMLVersion.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
@@ -171,6 +172,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Common\Assets\windows_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Common\Assets\NoImage.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(XamlSpyInstallPath)MSBuild\FirstFloor.XamlSpy.WPF.targets" Condition="'$(XamlSpyInstallPath)' != '' and '$(Configuration)' == 'DEBUG'" />
