--- a/AppCommander/AppCommander.csproj
+++ b/AppCommander/AppCommander.csproj
@@ -95,12 +95,8 @@
     <Compile Include="Common\Config\ConfigWrapper.cs" />
     <Compile Include="Common\Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Common\Converters\NameToImagePathConverter.cs" />
-    <Compile Include="Common\Converters\RgbToColorBrushConverter.cs" />
     <Compile Include="Common\Converters\StringToXMLVersionConverter.cs" />
     <Compile Include="Common\Log\Logger.cs" />
-    <Compile Include="Common\TemplateSelectors\MainAreaContentTemplateSelector.cs" />
-    <Compile Include="Common\TemplateSelectors\EditImageTemplateSelector.cs" />
-    <Compile Include="Common\TemplateSelectors\PersonAreaTemplateSelector.cs" />
     <Compile Include="Common\UserControls\RatingControl.xaml.cs">
       <DependentUpon>RatingControl.xaml</DependentUpon>
     </Compile>
@@ -145,9 +141,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Common\Assets\Background.PNG" />
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
@@ -175,6 +168,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Common\Assets\NoImage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Common\Assets\splash.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(XamlSpyInstallPath)MSBuild\FirstFloor.XamlSpy.WPF.targets" Condition="'$(XamlSpyInstallPath)' != '' and '$(Configuration)' == 'DEBUG'" />
